add docker and rest api with bd

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 PORT=4000
 
+DATABASE_URL="postgresql://postgres:mysecretpassword@localhost:5432/mydb"
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=mysecretpassword
+POSTGRES_DB=mydb
+
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
